--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,11 @@ spring:
           uri: https://github.com/nekperu15739/config-repo
 server:
   port: 8888
+  
+management:
+  security:
+    enabled: false
+    
+logging:
+  path: /tmp
+  
