--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
      	<docker.image.prefix>nekperu15739</docker.image.prefix>
+   	    <docker.image.tag>latest</docker.image.tag>
 	</properties>
 
 	<dependencies>
@@ -72,25 +73,39 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>com.spotify</groupId> -->
+<!-- 				<artifactId>docker-maven-plugin</artifactId> -->
+<!-- 				<version>0.4.11</version> -->
+<!-- 				<configuration> -->
+<!-- 					<imageName>${docker.image.prefix}/${project.artifactId}</imageName> -->
+<!-- 					<baseImage>frolvlad/alpine-oraclejdk8:slim</baseImage> -->
+<!-- 					<entryPoint>["java", "-jar", "/tmp/${project.build.finalName}.war"]</entryPoint> -->
+<!-- 					<resources> -->
+<!-- 						<resource> -->
+<!-- 							<targetPath>/tmp</targetPath> -->
+<!-- 							<directory>${project.build.directory}</directory> -->
+<!-- 							<include>${project.build.finalName}.war</include> -->
+<!-- 						</resource> -->
+<!-- 					</resources> -->
+<!-- 				</configuration> -->
+<!-- 			</plugin> -->
 			<plugin>
-				<groupId>com.spotify</groupId>
-				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.4.11</version>
-				<configuration>
-					<imageName>${docker.image.prefix}/${project.artifactId}</imageName>
-					<baseImage>frolvlad/alpine-oraclejdk8:slim</baseImage>
-					<entryPoint>["java", "-jar", "/tmp/${project.build.finalName}.war"]</entryPoint>
-					<!-- copy the service's jar file from target into the root directory 
-						of the image -->
-					<resources>
-						<resource>
-							<targetPath>/tmp</targetPath>
-							<directory>${project.build.directory}</directory>
-							<include>${project.build.finalName}.war</include>
-						</resource>
-					</resources>
-				</configuration>
-			</plugin>
+		      <groupId>com.spotify</groupId>
+		      <artifactId>docker-maven-plugin</artifactId>
+		      <version>0.4.11</version>
+		      <configuration>
+		        <imageName>${docker.image.prefix}/${project.artifactId}:${docker.image.tag}</imageName>
+                <dockerDirectory>${basedir}/dockerDirectory/</dockerDirectory>
+		        <resources>
+		           <resource>
+		             <targetPath>/</targetPath>
+		             <directory>${project.build.directory}</directory>
+		             <include>${project.build.finalName}.war</include>
+		           </resource>
+		        </resources>
+		      </configuration>
+		    </plugin>
 		</plugins>
 	</build>
 
