Adding user Deprecating server class dependency

--- a/dockerDirectory/Dockerfile
+++ b/dockerDirectory/Dockerfile
@@ -1,3 +1,5 @@
-FROM frolvlad/alpine-oraclejdk8:slim
+FROM store/oracle/serverjre:8
+RUN groupadd -r javagroup && useradd -r -g javagroup javauser
+USER javauser
 ADD /spring-cloud-config-0.0.1-SNAPSHOT.war /tmp/
 ENTRYPOINT ["java", "-jar", "/tmp/spring-cloud-config-0.0.1-SNAPSHOT.war"]
